# piet-metal

./: .gitignore  Cargo.toml  README.md
TestApp/: AppDelegate.h  AppDelegate.m  GenTypes.h  Info.plist  PietRender.metal  PietRenderer.h  PietRenderer.m  PietShaderTypes.h  SceneEncoder.h  SceneEncoder.m  ViewController.h  ViewController.m  main.m
TestApp/Base.lproj/: Main.storyboard
include/: piet_metal.h
piet-gpu-derive/: Cargo.toml
piet-gpu-derive/src/: lib.rs
piet-gpu-types/src/: encoder.rs  lib.rs  main.rs  ptcl.rs  scene.rs
piet-metal/: Cargo.toml
piet-metal-derive/: Cargo.toml
piet-metal-derive/src/: lib.rs
piet-metal.xcodeproj/: project.pbxproj
piet-metal.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
piet-metal.xcodeproj/xcuserdata/raph.xcuserdatad/xcschemes/: xcschememanagement.plist
piet-metal/src/: lib.rs  main.rs  scene.rs
src/: flatten.rs  lib.rs  main.rs
