[package]
name = "piet-metal"
version = "0.0.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "A Metal-based renderer for the piet 2D graphics abstraction."
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]

[dependencies]
# Note: 0.2.1 has some bugs, we'll do a new release soon
#kurbo = "0.2.1"
kurbo = { git = "https://github.com/linebender/kurbo" }

[lib]
name = "piet_metal"
crate-type = ["staticlib"]
